# config-server

./: .env  .gitignore  Cargo.toml  LICENSE  init.sql  private.pem  public.pem  sonar-project.properties  sonar-scanner.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml  sonar_cloud.yaml
entity/: Cargo.toml
entity/src/: app.rs  config.rs  lib.rs  namespace.rs  release.rs  security.rs
etc/: default.toml
etc/config/: dev.toml
migrations/2024-04-17-142102_init/: down.sql  up.sql
model/: Cargo.toml
model/src/: models.rs  schema.rs
src/: lib.rs  main.rs
src/auth/: mod.rs  model.rs
src/config/: config.rs  log.rs  mod.rs  model.rs
src/domain/: config.rs
src/entities/: access_key.rs  app.rs  app_chat_group_encrypt_history.rs  app_chat_group_history.rs  app_chat_whisper_history.rs  app_moment.rs  app_moment_comment.rs  app_moment_like.rs  app_moment_like_log.rs  app_moments_image.rs  app_namespace.rs  app_news.rs  app_news_catalog.rs  app_news_comment.rs  app_news_favorite.rs  app_news_favorite_like_log.rs  app_news_like.rs  audit.rs  audit_log.rs  audit_log_data_influence.rs  cluster.rs  commit.rs  gray_release_rule.rs  instance.rs  instance_config.rs  item.rs  live_chat_history.rs  live_forbidden_set.rs  live_mobile_nav_bar.rs  live_nav_bar.rs  live_robot_time_set.rs  live_room.rs  live_room_chapter.rs  live_room_chapter_item.rs  live_room_chapter_item_lecturer.rs  live_room_chapter_log.rs  live_room_lecture_vote.rs  live_room_lecturer.rs  live_room_styles.rs  live_room_theme.rs  (+50 more)
src/middleware/: auth.rs  cors.rs  datasource.rs  error_handler.rs  interceptor.rs  mod.rs  response.rs
src/models/: app.rs  config.rs  mod.rs
src/module/: route.rs
src/util/: auth_utils.rs  error.rs  mod.rs
