[package]
name = "config-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "0.4.21"

rbs = { version = "4.5"}
rbatis = { version = "4.5"}
rbdc-mysql = "4"
fast_log = "1.6"
