[package]
name = "config-server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
log = "0.4.21"
dotenv = "0.15"

rbs = { version = "4.5" }
rbatis = { version = "4.5" }
rbdc-mysql = "4"
mime = "0.3.17"
fast_log = { version = "1.6.0", features = ["gzip", "lz4"] }
