[package]
name = "config_server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }

# actix web
actix-web = "4.9.0"
actix-http = "3.9.0"
actix-cors = "0.7.0"
actix-web-httpauth = "0.8.2"
actix-web-lab = "0.22.0"

#jwt
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
fancy-regex = "0.13.0"

# seaorm
sea-orm = { version = "1.1", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls", "with-chrono", "with-json"] }
chrono = { version = "0.4.38", features = ["serde"] }

# logging
log = "0.4.22"

# serialization
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
derive_more = "1.0.0"

# utils
config = "0.14.0"
fastdate = "0.3.32"
futures-util = "0.3.30"
base64 = "0.22.1"
openssl = "0.10.66"
once_cell = "1.19.0"
futures = "0.3"

# tracing
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-error = "0.2.0"
tracing-actix-web = "0.7.11"

